--- a/jellyfish-core/Cargo.toml
+++ b/jellyfish-core/Cargo.toml
@@ -9,3 +9,12 @@ license = "MIT"
 readme = "../README.md"
 
 [dependencies]
+ed25519-dalek = "1"
+hex = { version = "*", features = ["serde", "alloc"] }
+rand_core = "*"
+serde = { version = "1", features = ["derive"] }
+serde_with = "2"
+sha2 = "*"
+
+[dev-dependencies]
+serde_json = "1"
