--- a/jellyfish-core/Cargo.toml
+++ b/jellyfish-core/Cargo.toml
@@ -12,7 +12,7 @@ readme = "../README.md"
 ed25519-dalek = "1"
 hex = { version = "*", features = ["serde", "alloc"] }
 itertools = "*"
-rand_core = "*"
+rand = "0.7.3"
 rs_merkle = "*"
 serde = { version = "1", features = ["derive"] }
 serde_with = "2"
